# docu-flow

./: .env.example  .gitignore  .pre-commit-config.yaml  PLANNING.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
docker/: Dockerfile
docs/: architecture.md  getting_started.md  research.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CriteriaTable.tsx  PipelineFlow.tsx  ProtocolUpload.tsx  ScreeningForm.tsx  ScreeningResultCard.tsx
frontend/src/hooks/: useProtocol.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
scripts/: run_dev.sh  run_worker.sh
src/: types.ts
src/docu_flow/: __init__.py  cli.py  config.py  logging.py
src/docu_flow/api/: main.py
src/docu_flow/api/routes/: health.py  protocols.py  screening.py
src/docu_flow/pipeline/: __init__.py  classifier.py  criteria_extractor.py  extractor.py  orchestrator.py  ranker.py  screener.py  section_locator.py
src/docu_flow/prompts/: extraction.py
src/docu_flow/schemas/: __init__.py  criteria.py  pdf.py
src/docu_flow/utils/: gemini_client.py  llm_client.py  pdf_utils.py
src/docu_flow/worker/: celery_app.py  tasks.py
src/pipeline/: candidateScreener.ts  criteriaExtractor.ts  documentParser.ts  index.ts  paretoFilter.ts
tests/: conftest.py
tests/e2e/: 06-full-pipeline.test.ts
tests/integration/: 04-pareto-filter.test.ts  05-pipeline-integration.test.ts  README.md  conftest.py  test_api.py  test_easy_pdf.py  test_hard_pdf.py
tests/pdf_strategies/: evaluator.py  result.py  run_all.py
tests/pdf_strategies/fixtures/: make_synthetic.py
tests/pdf_strategies/strategies/: _shared_prompt.py  base.py  s1_pymupdf.py  s2_claude.py  s3_gemini.py  s4_unstructured.py
tests/unit/: 01-document-parser.test.ts  02-criteria-extractor.test.ts  03-candidate-screener.test.ts  test_classifier.py  test_ranker.py  test_section_locator.py
